--- a/src/app/archive/archive.page.html
+++ b/src/app/archive/archive.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>archive</ion-title>
+    <ion-title>Archive</ion-title>
   </ion-toolbar>
 </ion-header>
 
