--- a/src/app/doing/to-do-entry/to-do-entry.component.html
+++ b/src/app/doing/to-do-entry/to-do-entry.component.html
@@ -1,11 +1,12 @@
 <ion-item>
+  <ion-checkbox slot="start"></ion-checkbox>
   <ion-label>{{toDo.title}}</ion-label>
   <ion-buttons>
     <ion-button [routerLink]="['/edit-to-do', toDo.id]">
-      <ion-icon name="create"></ion-icon>
+      <ion-icon name="create" size="large"></ion-icon>
     </ion-button>
     <ion-button (click)="delete()">
-      <ion-icon name="trash"></ion-icon>
+      <ion-icon name="trash" size="large"></ion-icon>
     </ion-button>
   </ion-buttons>
 </ion-item>
