--- a/src/app/edit-to-do/edit-to-do.page.html
+++ b/src/app/edit-to-do/edit-to-do.page.html
@@ -7,7 +7,7 @@
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button [disabled]="editToDoForm.invalid" (click)="saveToDo()">
-        <ion-icon name="checkmark" color="primary"></ion-icon>
+        <ion-icon name="checkmark" color="primary" size="large"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>{{titleBarText}}</ion-title>
