[FIX] Fixed design  on edit to do page

--- a/src/app/edit-to-do/edit-to-do.page.html
+++ b/src/app/edit-to-do/edit-to-do.page.html
@@ -30,7 +30,7 @@
     <ion-item-group>
       <ion-row  justify-content-between>
         <h5>Deadline</h5>
-        <ion-toggle formControlName="showingDeadlineMenu"></ion-toggle>
+        <ion-toggle formControlName="showingDeadlineMenu" align-self-center></ion-toggle>
       </ion-row>
       <div [style.display]="showingDeadlineMenu ? 'block' : 'none'">
         <ion-item>
